ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "sock-shop-ingress"
  namespace: "sock-shop"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/group.name: finalexam
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-2:768896297792:certificate/c65d5f4d-0e54-4c11-8fe6-628f24868ef2

  labels:
    app: sock-shop-ingress

spec:
  rules:
  - host: sock-shop.faitharowosafe.me   
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front-end
            port:
              number: 80
  # - host: polyglot.faitharowosafe.me   
  # - http:
  #     paths:
  #     - path: /
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: frontend
  #           port:
  #             number: 80
